--- a/io/tools/system_directories/CMakeLists.txt
+++ b/io/tools/system_directories/CMakeLists.txt
@@ -1,23 +1,21 @@
 #*******************************************************************************
 # Author  :     Romain Vinders
 # License :     MIT
-# ------------------------------------------------------------------------------
-# Input/output utilities + file system management
 #*******************************************************************************
 cmake_minimum_required(VERSION 3.14)
-include("${CMAKE_CURRENT_SOURCE_DIR}/../_cmake/cwork.cmake")
-cwork_set_default_solution("pandora" "${CMAKE_CURRENT_SOURCE_DIR}/..")
-cwork_read_version_from_file("${CMAKE_CURRENT_SOURCE_DIR}/../build_version.txt" OFF)
-project("${CWORK_SOLUTION_NAME}.io" VERSION ${CWORK_BUILD_VERSION} LANGUAGES C CXX)
+include("${CMAKE_CURRENT_SOURCE_DIR}/../../../_cmake/cwork.cmake")
+cwork_set_default_solution("pandora" "${CMAKE_CURRENT_SOURCE_DIR}/../../..")
+cwork_read_version_from_file("${CMAKE_CURRENT_SOURCE_DIR}/../../../build_version.txt" OFF)
+project("${CWORK_SOLUTION_NAME}.system_directories" VERSION ${CWORK_BUILD_VERSION} LANGUAGES C CXX)
 
 # ┌──────────────────────────────────────────────────────────────────┐
 # │  Dependencies                                                    │
 # └──────────────────────────────────────────────────────────────────┘
-cwork_set_external_libs("private" filesystem)
-cwork_set_internal_libs(system)
+cwork_set_internal_libs(io)
 
 # ┌──────────────────────────────────────────────────────────────────┐
 # │  Project settings                                                │
 # └──────────────────────────────────────────────────────────────────┘
-cwork_create_project("static" "${CWORK_SOLUTION_PATH}/_cmake" "${CWORK_SOLUTION_PATH}/_cmake/modules"
-                     "include" "src" "test" "tools/system_directories")
+cwork_set_subproject_type("tools")
+cwork_create_project("executable" "${CWORK_SOLUTION_PATH}/_cmake" "${CWORK_SOLUTION_PATH}/_cmake/modules"
+                     "include" "src" "test")
