infra-ci: code coverage (linux/unix builds): set default target

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -32,6 +32,9 @@ coverage:
         enabled: yes
         target: 70%
         threshold: 10%
+        base: auto
+        flags:
+          - unit
         branches: 
           - develop
     
