patch-hardware: CPU specs (x86/ARM): CPU analyzer tool

--- a/hardware/tools/cpu_analyzer/CMakeLists.txt
+++ b/hardware/tools/cpu_analyzer/CMakeLists.txt
@@ -1,25 +1,21 @@
 #*******************************************************************************
 # Author  :     Romain Vinders
 # License :     MIT
-# ------------------------------------------------------------------------------
-# Hardware and device tools, hardware information, CPU specs, ...
 #*******************************************************************************
 cmake_minimum_required(VERSION 3.14)
-include("${CMAKE_CURRENT_SOURCE_DIR}/../_cmake/cwork.cmake")
-cwork_set_default_solution("pandora" "${CMAKE_CURRENT_SOURCE_DIR}/..")
-cwork_read_version_from_file("${CMAKE_CURRENT_SOURCE_DIR}/../build_version.txt" OFF)
-project("${CWORK_SOLUTION_NAME}.hardware" VERSION ${CWORK_BUILD_VERSION} LANGUAGES C CXX)
+include("${CMAKE_CURRENT_SOURCE_DIR}/../../../_cmake/cwork.cmake")
+cwork_set_default_solution("pandora" "${CMAKE_CURRENT_SOURCE_DIR}/../../..")
+cwork_read_version_from_file("${CMAKE_CURRENT_SOURCE_DIR}/../../../build_version.txt" OFF)
+project("${CWORK_SOLUTION_NAME}.cpu_analyzer" VERSION ${CWORK_BUILD_VERSION} LANGUAGES C CXX)
 
 # ┌──────────────────────────────────────────────────────────────────┐
 # │  Dependencies                                                    │
 # └──────────────────────────────────────────────────────────────────┘
-cwork_set_internal_libs(system)
-if(MINGW)
-    cwork_set_compile_options(-mfxsr -mxsave -mxsaveopt)
-endif()
+cwork_set_internal_libs(hardware)
 
 # ┌──────────────────────────────────────────────────────────────────┐
 # │  Project settings                                                │
 # └──────────────────────────────────────────────────────────────────┘
-cwork_create_project("static" "${CWORK_SOLUTION_PATH}/_cmake" "${CWORK_SOLUTION_PATH}/_cmake/modules"
-                     "include" "src" "test" "tools/cpu_analyzer")
+cwork_set_subproject_type("tools")
+cwork_create_project("executable" "${CWORK_SOLUTION_PATH}/_cmake" "${CWORK_SOLUTION_PATH}/_cmake/modules"
+                     "include" "src" "test")
