infra-project: add memory lib (memory/endian tools, fixed size data, memory pool...)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ cwork_create_solution("${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}
     system
     thread
     pattern
+    memory
     logic
     time
     io
