--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -54,6 +54,8 @@ for:
 
 install:
   - call _scripts/ci/install_dependencies.bat
+  - if [%COMPILER%]==[MSVC19] call _scripts/ci/install_vulkan.bat
+  - if [%COMPILER%]==[MinGW-w64] call _scripts/ci/install_vulkan.bat
   # MinGW
   - if [%COMPILER%]==[MinGW-w64] choco upgrade chocolatey
   - if [%COMPILER%]==[MinGW-w64] if not exist "C:\mingw.7z" appveyor-retry appveyor DownloadFile "http://downloads.sourceforge.net/mingw-w64/x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z" -FileName "C:\mingw.7z"
