infra-ci: continuous integration on windows (appveyor): set C++14 build

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -75,7 +75,7 @@ build_script:
   - cd ..
   # build project
   - if [%COMPILER%]==[MSVC19] cmake -G "Visual Studio 16 2019" -A %PLATFORM% -S . -B ./_build/%BUILD_DIR%
-  - if [%COMPILER%]==[MSVC17] cmake -G "Visual Studio 15 2017" -A %PLATFORM% -S . -B ./_build/%BUILD_DIR% -DBUILD_CPP_REVISION="14"
+  - if [%COMPILER%]==[MSVC17] cmake -G "Visual Studio 15 2017" -A %PLATFORM% -S . -B ./_build/%BUILD_DIR% -DCWORK_CPP_REVISION="14"
   - if [%COMPILER%]==[LLVM/Clang] cmake -G "Ninja" -S . -B ./_build/%BUILD_DIR% -DCMAKE_C_COMPILER=clang.exe -DCMAKE_CXX_COMPILER=clang++.exe -DCMAKE_LINKER=lld-link.exe -DCMAKE_MAKE_PROGRAM=ninja.exe -DCMAKE_CXX_FLAGS="-target x86_64-w64-mingw32" -DCMAKE_C_FLAGS="-target x86_64-w64-mingw32"
   - if [%COMPILER%]==[MinGW-w64] cmake -G "MinGW Makefiles" -S . -B ./_build/%BUILD_DIR% -DCMAKE_C_COMPILER=gcc.exe -DCMAKE_CXX_COMPILER=g++.exe -DCMAKE_MAKE_PROGRAM=mingw32-make.exe
   # compile
