infra-cwork: cmake modules: direct3D11: support 2010 SDK

--- a/video/CMakeLists.txt
+++ b/video/CMakeLists.txt
@@ -33,7 +33,7 @@ if(CWORK_VIDEO_OPENGL4 OR CWORK_VIDEO_VULKAN) # common
 endif()
 
 if(_EXTERN_LIBS)
-    cwork_set_external_libs("private" ${_EXTERN_LIBS})
+    cwork_set_external_libs("public" ${_EXTERN_LIBS})
 endif()
 cwork_set_internal_libs(system thread hardware)
 
