infra-video: cmake project: autodetect sources/shaders per api

--- a/video/CMakeLists.txt
+++ b/video/CMakeLists.txt
@@ -38,33 +38,78 @@ endif()
 cwork_set_internal_libs(system thread hardware)
 
 # ┌──────────────────────────────────────────────────────────────────┐
-# │  Project settings                                                │
+# │  File detection                                                  │
 # └──────────────────────────────────────────────────────────────────┘
-set(_INCLUDE_DIR "include")
-set(_SOURCE_DIR "src")
-set(_TEST_DIR "test")
+set(_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/video")
+set(_SHADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/shaders")
+set(_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
+set(_TEST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/test")
 
-set(_INCLUDE_FILES)
+# autodetect files related to a specific category
+macro(pandora_video_autodetect_files category_id)
+    message("> auto-detection of ${category_id} files...")
+    autodetect_source_files("${_INCLUDE_DIR}/${category_id}" "*.h*")
+    if(CWORK_AUTODETECTED_FILES)
+        set(_INCLUDE_FILES ${_INCLUDE_FILES} ${CWORK_AUTODETECTED_FILES})
+    endif()
+    unset(CWORK_AUTODETECTED_FILES)
+    
+    autodetect_source_files("${_SOURCE_DIR}/${category_id}" "*.c*")
+    if(CWORK_AUTODETECTED_FILES)
+        if(_SOURCE_FILES)
+            set(_SOURCE_FILES ${_SOURCE_FILES} ${CWORK_AUTODETECTED_FILES})
+        else()
+            set(_SOURCE_FILES ${CWORK_AUTODETECTED_FILES})
+        endif()
+    endif()
+    unset(CWORK_AUTODETECTED_FILES)
+    
+    autodetect_source_files("${_SHADER_DIR}/${category_id}" "*.*")
+    if(CWORK_AUTODETECTED_FILES)
+        set(_SHADER_FILES ${_SHADER_FILES} ${CWORK_AUTODETECTED_FILES})
+    endif()
+    unset(CWORK_AUTODETECTED_FILES)
+    
+    autodetect_source_files("${_TEST_DIR}/${category_id}" "*.[hc]*")
+    if(CWORK_AUTODETECTED_FILES)
+        set(_TEST_FILES ${_TEST_FILES} ${CWORK_AUTODETECTED_FILES})
+    endif()
+    unset(CWORK_AUTODETECTED_FILES)
+endmacro()
+
+# general/common files
+set(_INCLUDE_FILES
+    ${_INCLUDE_DIR}/abstract_enums.h
+)
 set(_SOURCE_FILES)
-set(_TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/${_TEST_DIR}/main.cpp)
+set(_TEST_FILES ${_TEST_DIR}/main.cpp)
+set(_SHADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/build_shaders.py)
 
+# files related to renderers
 if(CWORK_VIDEO_OPENGL4)
-    set(_INCLUDE_FILES ${_INCLUDE_FILES} 
-        ${CMAKE_CURRENT_SOURCE_DIR}/${_INCLUDE_DIR}/video/api/opengl.h
-    )
+    set(_INCLUDE_FILES ${_INCLUDE_FILES} ${_INCLUDE_DIR}/api/opengl.h)
+    pandora_video_autodetect_files(openGL4)
+endif()
+if(CWORK_VIDEO_D3D11)
+    pandora_video_autodetect_files(d3d11)
 endif()
 if(CWORK_VIDEO_VULKAN)
-    set(_INCLUDE_FILES ${_INCLUDE_FILES} 
-        ${CMAKE_CURRENT_SOURCE_DIR}/${_INCLUDE_DIR}/video/api/vulkan.h
-    )
+    set(_INCLUDE_FILES ${_INCLUDE_FILES} ${_INCLUDE_DIR}/api/vulkan.h)
+    pandora_video_autodetect_files(vulkan)
 endif()
 
+# ┌──────────────────────────────────────────────────────────────────┐
+# │  Project settings                                                │
+# └──────────────────────────────────────────────────────────────────┘
 cwork_set_include_files(${_INCLUDE_FILES})
-#cwork_set_source_files(${_SOURCE_FILES})
+if(_SOURCE_FILES)
+    cwork_set_source_files(${_SOURCE_FILES})
+endif()
+cwork_set_custom_files(${_SHADER_FILES})
 cwork_set_test_files(${_TEST_FILES})
 
 cwork_create_project("static" "${CWORK_SOLUTION_PATH}/_cmake" "${CWORK_SOLUTION_PATH}/_cmake/modules"
-                     ${_INCLUDE_DIR} ${_SOURCE_DIR} ${_TEST_DIR})
+                     "include" "src" "test")
 if((WIN32 OR WIN64 OR _WIN32 OR _WIN64) AND DEFINED _VIDEO_D3D11_NOT_SUPPORTED AND _VIDEO_D3D11_NOT_SUPPORTED)
     message("> Windows SDK not installed or not supported by compiler -> direct3D disabled")
 endif()
@@ -74,9 +119,9 @@ endif()
 
 # build shaders from shader modules
 add_custom_target(${PROJECT_NAME}.build_shaders ALL
-    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/build_shaders.py "${CMAKE_CURRENT_SOURCE_DIR}/${_INCLUDE_DIR}/video/shaders" 
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/build_shaders.py "${_SHADER_DIR}/shaders" 
                                                                               "${CMAKE_CURRENT_SOURCE_DIR}/_generated" 
-                                                                              "${CMAKE_CURRENT_SOURCE_DIR}/${_INCLUDE_DIR}/_embed"
+                                                                              "${_INCLUDE_DIR}/_embed"
     COMMENT "Building shader files..."
 )
 set_target_properties(${PROJECT_NAME}.build_shaders PROPERTIES FOLDER ${CWORK_SOLUTION_NAME}/tools)
