--- a/hardware/tools/hardware_analyzer/CMakeLists.txt
+++ b/hardware/tools/hardware_analyzer/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required(VERSION 3.14)
 include("${CMAKE_CURRENT_SOURCE_DIR}/../../../_cmake/cwork.cmake")
 cwork_set_default_solution("pandora" "${CMAKE_CURRENT_SOURCE_DIR}/../../..")
 cwork_read_version_from_file("${CMAKE_CURRENT_SOURCE_DIR}/../../../build_version.txt" OFF)
-project("${CWORK_SOLUTION_NAME}.cpu_analyzer" VERSION ${CWORK_BUILD_VERSION} LANGUAGES C CXX)
+project("${CWORK_SOLUTION_NAME}.hardware_analyzer" VERSION ${CWORK_BUILD_VERSION} LANGUAGES C CXX)
 
 # ┌──────────────────────────────────────────────────────────────────┐
 # │  Dependencies                                                    │
