--- a/.travis.yml
+++ b/.travis.yml
@@ -253,7 +253,7 @@ jobs:
             - sourceline: 'deb https://apt.repos.intel.com/oneapi all main'
               key_url: 'https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB'
           packages:
-            - intel-oneapi-icc-2021.1
+            - intel-oneapi-dpcpp-cpp-compiler-pro
             - libc++-8-dev
             - libc++abi-8-dev
             - libasound2-dev
