--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,56 +2,112 @@ version: 0.1.{build}-{branch}
 clone_folder: C:\projects\pandora_toolbox
 platform: x64
 configuration: Release
+
 environment:
   matrix:
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-      APPVEYOR_JOB_NAME: windows-msvc2019
-      BUILD_DIR: msvc19
-      BUILD_TYPE: Release
-      COMPILER: MSVC19
-      PLATFORM: x64
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      APPVEYOR_JOB_NAME: windows-msvc2017
-      BUILD_DIR: msvc17
-      BUILD_TYPE: Debug
-      COMPILER: MSVC17
-      PLATFORM: x64
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-      APPVEYOR_JOB_NAME: windows-mingw64
-      BUILD_DIR: mingw64
-      BUILD_TYPE: Debug
-      COMPILER: MinGW-w64
+  # ClangCL-VS2019 x86_64 / C++17
+  - TOOLCHAIN: "ClangCL x64"
+    PACKAGE_ID: vs2019clang_x86_64
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    APPVEYOR_JOB_NAME: clangcl-vs2019-64
+    BUILD_TYPE: Debug
+    CMAKE_ARGS: -A x64 -T ClangCL -DCMAKE_FLAGS="-m64"
+    GENERATOR: Visual Studio 16 2019
+    VULKAN: true
+    VCVARS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
+    VCVARSARG: amd64
+    
+  # Clang10-LLVM x86_64 / C++17
+  - TOOLCHAIN: "Visual Studio 2019 Clang/LLVM 10.0.0"
+    PACKAGE_ID: clang10_x86_64
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    APPVEYOR_JOB_NAME: clangcl-ninja-64
+    BUILD_TYPE: Debug
+    CMAKE_ARGS: -DCMAKE_C_COMPILER=clang-cl.exe -DCMAKE_CXX_COMPILER=clang-cl.exe -DCMAKE_FLAGS="-m64"
+    GENERATOR: Ninja
+    VCVARS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
+    VCVARSARG: amd64
+    PACMAN_PACKAGES: "mingw-w64-x86_64-ninja"
+    PATH: C:\Program Files\LLVM\bin;C:\msys64\mingw64\bin;%PATH%
+    CLANG_URL: https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/LLVM-10.0.0-win64.exe
+  
+  # MSVC-VS2019 x86_64 / C++17
+  - TOOLCHAIN: "Visual Studio 2019 x64"
+    PACKAGE_ID: vs2019_x86_64
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    APPVEYOR_JOB_NAME: msvc-vs2019-64
+    BUILD_TYPE: Release
+    CMAKE_ARGS: -A x64
+    GENERATOR: Visual Studio 16 2019
+    VULKAN: true
+    VCVARS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
+    VCVARSARG: amd64
+    
+  # MSVC-VS2019 x86 (x32) / C++17
+  - TOOLCHAIN: "Visual Studio 2019"
+    PACKAGE_ID: vs2019_x86
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    APPVEYOR_JOB_NAME: msvc-vs2019-32
+    BUILD_TYPE: Debug
+    CMAKE_ARGS: -A Win32
+    GENERATOR: Visual Studio 16 2019
+    VULKAN: true
+    VCVARS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
+    VCVARSARG: amd64
+  
+  # MSVC-VS2017 x86_64 / C++14
+  - TOOLCHAIN: "Visual Studio 2017 x64"
+    PACKAGE_ID: vs2017_x86_64
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    APPVEYOR_JOB_NAME: msvc-vs2017-64
+    BUILD_TYPE: Debug
+    CMAKE_ARGS: -A x64 -DCWORK_CPP_REVISION="14"
+    GENERATOR: Visual Studio 15 2017 Win64
+    VCVARS: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat
+    VCVARSARG: amd64
+
+  # Mingw-w64 x86_64 / C++17
+  - TOOLCHAIN: "MinGW-w64 GCC"
+    PACKAGE_ID: mingw_x86_64
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    APPVEYOR_JOB_NAME: gcc-mingw-64
+    CMAKE_ARGS: -DCMAKE_C_COMPILER=gcc.exe -DCMAKE_CXX_COMPILER=g++.exe -DCMAKE_MAKE_PROGRAM=mingw32-make.exe
+    BUILD_TYPE: Debug
+    GENERATOR: MinGW Makefiles
+    VULKAN: true
+    PATH: C:\mingw64\bin;C:\mingw64\x86_64-w64-mingw32\lib;C:\mingw64\x86_64-w64-mingw32\include;%APPVEYOR_BUILD_FOLDER%\deps\bin;%PATH%;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\architecture;C:\Program Files (x86)\Windows Kits\10\bin\architecture\ucrt;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\x64;C:\Windows\System32"
+    INCLUDE: C:\mingw64\x86_64-w64-mingw32\include;%INCLUDE%
+    LIB: C:\mingw64\x86_64-w64-mingw32\lib;%LIB%;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\architecture;C:\Program Files (x86)\Windows Kits\10\bin\architecture\ucrt;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\x64
+    MINGW_URL: http://downloads.sourceforge.net/mingw-w64/x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
 
 install:
-  - call _scripts/ci/install_dependencies.bat
-  - set "PATH=C:\\Python38-x64;C:\\Python38-x64\\Scripts;%PATH%"
-  # if [%COMPILER%]==[MSVC19] call _scripts/ci/install_vulkan.bat
-  # if [%COMPILER%]==[MinGW-w64] call _scripts/ci/install_vulkan.bat
-  # MinGW
-  - if [%COMPILER%]==[MinGW-w64] choco upgrade chocolatey
-  - if [%COMPILER%]==[MinGW-w64] if not exist "C:\mingw.7z" appveyor-retry appveyor DownloadFile "http://downloads.sourceforge.net/mingw-w64/x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z" -FileName "C:\mingw.7z"
-  - if [%COMPILER%]==[MinGW-w64] 7z x -y -oC:\ "C:\mingw.7z" > nul
-  - if [%COMPILER%]==[MinGW-w64] set INCLUDE=C:\mingw64\x86_64-w64-mingw32\include;%INCLUDE%
-  - if [%COMPILER%]==[MinGW-w64] set LIB=C:\mingw64\x86_64-w64-mingw32\lib;%LIB%
-  - if [%COMPILER%]==[MinGW-w64] set "LIB=%LIB%;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\architecture;C:\Program Files (x86)\Windows Kits\10\bin\architecture\ucrt;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\x64"
-  - if [%COMPILER%]==[MinGW-w64] set PATH=C:\mingw64\bin;C:\mingw64\x86_64-w64-mingw32\lib;C:\mingw64\x86_64-w64-mingw32\include;%APPVEYOR_BUILD_FOLDER%\deps\bin;%PATH:C:\Program Files\Git\usr\bin;=%
-  - if [%COMPILER%]==[MinGW-w64] set "PATH=%PATH%;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\architecture;C:\Program Files (x86)\Windows Kits\10\bin\architecture\ucrt;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\x64;C:\Windows\System32"
+  - if defined VCVARS call "%VCVARS%" %VCVARSARG%
+  - set PATH=C:\Python38-x64;C:\Python38-x64\Scripts;%PATH%
+ 
+  #- if defined VULKAN call _scripts/ci/install_vulkan.bat
+  - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc "yes | pacman -Rd --noconfirm mingw-w64-i686-gcc-ada mingw-w64-x86_64-gcc-ada mingw-w64-i686-gcc-objc mingw-w64-x86_64-gcc-objc"
+  - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc "yes | pacman --needed --noconfirm -Syu"
+  - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc "yes | pacman --needed --noconfirm -Syu"
+  - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc "yes | pacman --needed --noconfirm -S %PACMAN_PACKAGES%"
+  - if defined MINGW_URL choco upgrade chocolatey
+  - if defined MINGW_URL if not exist "C:\mingw.7z" appveyor-retry appveyor DownloadFile %MINGW_URL% -FileName "C:\mingw.7z"
+  - if defined MINGW_URL 7z x -y -oC:\ "C:\mingw.7z" > nul
+  - if defined CLANG_URL appveyor-retry appveyor DownloadFile %CLANG_URL% -FileName llvm-installer.exe
+  - if defined CLANG_URL START /WAIT llvm-installer.exe /S /D=C:\"Program Files\LLVM"
+ 
+  - set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
 
 build_script:
+  # build directory + project version
   - cd C:\projects\pandora_toolbox
   - call _scripts/update_version.bat
   - mkdir _build
   - cd _build
-  - mkdir %BUILD_DIR%
+  - mkdir %PACKAGE_ID%
   - cd ..
-  # build project
-  - if [%COMPILER%]==[MSVC19] cmake -G "Visual Studio 16 2019" -A %PLATFORM% -S . -B ./_build/%BUILD_DIR%
-  - if [%COMPILER%]==[MSVC17] cmake -G "Visual Studio 15 2017" -A %PLATFORM% -S . -B ./_build/%BUILD_DIR% -DCWORK_CPP_REVISION="14"
-  - if [%COMPILER%]==[MinGW-w64] cmake -G "MinGW Makefiles" -S . -B ./_build/%BUILD_DIR% -DCMAKE_C_COMPILER=gcc.exe -DCMAKE_CXX_COMPILER=g++.exe -DCMAKE_MAKE_PROGRAM=mingw32-make.exe
-  - if [%COMPILER%]==[clang-cl] cmake -G "Visual Studio 16 2019" -A %PLATFORM% -T ClangCL -S . -B ./_build/%BUILD_DIR% -DCMAKE_FLAGS="-m64"
-  - if [%COMPILER%]==[LLVM/Clang] cmake -G "Ninja" -S . -B ./_build/%BUILD_DIR% -DCMAKE_C_COMPILER=clang.exe -DCMAKE_CXX_COMPILER=clang++.exe -DCMAKE_LINKER=lld-link.exe -DCMAKE_MAKE_PROGRAM=ninja.exe -DCMAKE_CXX_FLAGS="-target x86_64-w64-mingw32" -DCMAKE_C_FLAGS="-target x86_64-w64-mingw32"
-  # compile
-  - cmake --build ./_build/%BUILD_DIR% --config %BUILD_TYPE% --target install
+  # cmake build
+  - cmake -S . -B ./_build/%PACKAGE_ID% -G"%GENERATOR%" %CMAKE_ARGS% || (echo CMAKEERROR && echo CMAKEOUTPUT && exit 1)
+  - cmake --build ./_build/%PACKAGE_ID% --config %BUILD_TYPE% --target install
 
 test_script:
   - cd C:\projects\pandora_toolbox\_build\%BUILD_DIR%
